# SchemaTools

./: README.md  schemacheck.py
codecs/: README.md  simplecompresscalculus.ods
codecs/bin_c/: .gitignore  README.md  tauschema_codec.c  tauschema_codec.h
codecs/bin_c/doc/: Doxyfile
codecs/bin_c/src/: tauschema_check.c  tauschema_check.h  tauschema_codec.c  tauschema_codec.h
codecs/bin_c/test/: CMakeLists.txt  README.md  device_info.schema  tauschema_codec.c.gcov  tauschema_device_info_schema.c  tauschema_device_info_schema.h  test_buf.c  test_flater.c  testit.sh  testmain.c  testmain.h
codecs/bin_c/test/reports/: stdout_bin_c_test.txt
codecs/bin_c/test/reports/bin_c_test/: index-sort-f.html  index-sort-l.html  index.html
codecs/bin_c/test/reports/bin_c_test/src/: index-sort-f.html  index-sort-l.html  index.html  tauschema_check.c.func-sort-c.html  tauschema_check.c.func.html  tauschema_check.c.gcov.html  tauschema_codec.c.func-sort-c.html  tauschema_codec.c.func.html  tauschema_codec.c.gcov.html
codecs/bin_c/test/reports/bin_c_test/test/: index-sort-f.html  index-sort-l.html  index.html  test_buf.c.func-sort-c.html  test_buf.c.func.html  test_buf.c.gcov.html  test_flater.c.func-sort-c.html  test_flater.c.func.html  test_flater.c.gcov.html  testmain.c.func-sort-c.html  testmain.c.func.html  testmain.c.gcov.html
codecs/bin_php/: README.md  composer.json
codecs/bin_php/src/: Flaterator.php  Iterator.php  tauschema_check.php  tauschema_codec.php
codecs/bin_php/test/: test_buf.php  (+5 more)
test/: nice.schema  partial.schema  subschem.schema  test_verify_pydict.py
(+84 files in other folders)
